@@ -1,3 +1,8 @@
+2021-03-25 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/z80/gen.c:
+	  Fix handling of frame pointer omission in dry run.
+
 2021-03-25 Sergey Belyashov <sergey.belyashov@gmail.com>
 
 	* device/lib/_strcmp.c:
